--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<% if current_user %>
+  <%= link_to 'Sign out', destroy_user_session_path %>
+<% end %>
 <%= yield %>
 
 </body>
