Added bootstrap and adapted layouts

--- a/app/views/admin/sources/_form.html.erb
+++ b/app/views/admin/sources/_form.html.erb
@@ -1,5 +1,9 @@
-<%= form.label :name, 'Name' %>
-<%= form.text_field :name %>
+<div class="form-group">
+  <%= form.label :name, 'Name' %>
+  <%= form.text_field :name %>
+</div>
 
-<%= form.label :url, 'Url' %>
-<%= form.text_field :url %>
+<div class="form-group">
+  <%= form.label :url, 'Url' %>
+  <%= form.text_field :url %>
+</div>
