--- a/app/views/admin/category_pages/_form.html.erb
+++ b/app/views/admin/category_pages/_form.html.erb
@@ -7,3 +7,8 @@
   <%= form.label :url, 'Url' %>
   <%= form.text_field :url %>
 </div>
+
+<div class="form-group">
+  <%= form.label :brand, 'Brand' %>
+  <%= form.collection_select :brand_id, Brand.all, :id, :name %>
+</div>
