Undo nested resources

--- a/app/views/admin/category_pages/_form.html.erb
+++ b/app/views/admin/category_pages/_form.html.erb
@@ -12,3 +12,5 @@
   <%= form.label :brand, 'Brand' %>
   <%= form.collection_select :brand_id, Brand.all, :id, :name %>
 </div>
+
+<%= form.hidden_field :source_id, :value => @source_id %>
