--- a/app/views/admin/category_pages/_form.html.erb
+++ b/app/views/admin/category_pages/_form.html.erb
@@ -13,4 +13,4 @@
   <%= form.collection_select :brand_id, Brand.all, :id, :name %>
 </div>
 
-<%= form.hidden_field :source_id, :value => @source_id %>
+<%= form.hidden_field :source_id, :value => source.id %>
