--- a/app/views/admin/category_pages/index.html.erb
+++ b/app/views/admin/category_pages/index.html.erb
@@ -14,5 +14,5 @@
     <% end %>
 
   </table>
-<%= link_to 'Add a category page', new_category_page_path(source_id: @source.id) %>
+<%= link_to 'Add a category page', new_admin_category_page_path(source_id: @source.id) %>
 <% end %>
