--- a/app/views/admin/category_pages/_form.html.erb
+++ b/app/views/admin/category_pages/_form.html.erb
@@ -10,7 +10,7 @@
 
 <div class="form-group">
   <%= form.label :brand, 'Brand' %>
-  <%= form.collection_select :brand, Brand.all, :id, :name %>
+  <%= form.collection_select :brand_id, Brand.all, :id, :name %>
 </div>
 
 <%= form.hidden_field :source_id, :value => source.id %>
