--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,9 @@
       <div class="row-fluid">
         <div class="span12">
           <%= bootstrap_flash %>
-          <%= yield %>
+          <div ng-view>
+            <%= yield %>
+          </div>
         </div>
       </div><!--/row-->
     </div> <!-- /container -->
