Force to recompile if there is a change in one of the templates

--- a/app/assets/javascripts/app.js.erb
+++ b/app/assets/javascripts/app.js.erb
@@ -1,3 +1,7 @@
+//= depend_on_asset devices/index.html
+//= depend_on_asset devices/show.html
+//= depend_on_asset devices/select.html
+
 window.App = angular.module('PhoneFinder', ['ngResource', 'ngRoute']);
 
 App.config(['$routeProvider', function($routeProvider) {
