--- a/app/assets/templates/devices/select.html
+++ b/app/assets/templates/devices/select.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal">
+<form class="form-horizontal" ng-submit="submitForm()" ng-controller="DevicesSelectCtrl" >
 
   <ul class="nav nav-tabs">
     <li ng-repeat="step in steps" ng-class="{active: $index==getCurrentStepIndex()}">
